<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_save"
        android:showAsAction="always|withText"
        android:title="@string/sort_menu" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_name"
            android:showAsAction="ifRoom"
            android:title="@string/sort_name" />

        <item
            android:id="@+id/action_size"
            android:showAsAction="ifRoom"
            android:title="@string/sort_size" />

        <item
            android:id="@+id/action_date"
            android:showAsAction="ifRoom"
            android:title="@string/sort_date" />

        <item
            android:id="@+id/action_type"
            android:showAsAction="ifRoom"
            android:title="@string/sort_type" />
    </group>


</menu>