<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dip"
    android:layout_marginBottom="10dip"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/save_as"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13sdp" />

        <EditText
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="@dimen/_10sdp"
            android:id="@+id/filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/nhapten"
            android:textSize="@dimen/_13sdp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/my_bg_button"
            android:text="@string/file_save_button_cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/oksave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/my_bg_button"
            android:text="@string/file_save_button_save"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>