<?xml version="1.0" encoding="utf-8"?><!--
/**
 * Copyright (c) 2007, Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); 
 * you may not use this file except in compliance with the License. 
 * You may obtain a copy of the License at 
 *
 *     http://www.apache.org/licenses/LICENSE-2.0 
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS, 
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dip"
    android:layout_marginBottom="10dip"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:padding="@dimen/_6sdp"
        android:text="@string/save_format"
        android:textColor="#444"
        android:textSize="@dimen/_18sdp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/_17sdp" />

        <EditText
            android:id="@+id/filename"
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="@dimen/_17sdp" />

        <Spinner
            android:id="@+id/ringtone_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:gravity="center"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="@drawable/my_bg_button"
            android:text="@string/file_save_button_cancel"
            android:textColor="#fff" />

        <Button
            android:id="@+id/save"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginBottom="10dip"
            android:background="@drawable/my_bg_button"
            android:text="@string/alert_ok_button"
            android:textColor="#fff" />

    </LinearLayout>

</LinearLayout>
